# deepListen

./: .gitignore  LICENSE  MUSAICtrainer.py  README.md  app.py  extracted_features.pkl  presentation_script.md  pyproject.toml  requirements.txt  tester.py
templates/: index.html  result.html
